[package]
name = "recaptcha"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
edition = "2018"
description = "recaptcha response verification"
repository = "https://github.com/kumanote/recaptcha-rs"
readme = "README.md"
keywords = ["recaptcha"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"

[dependencies.http]
version = "0.2"

[dependencies.hyper]
version = "0.14"
features = ["client"]

[dependencies.hyper-rustls]
version = "0.22.1"

[dev-dependencies.tokio]
version = "1.12"
features = ["full"]
